<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.applications.all_possibilities.viewModels.FragmentPuzzleCreator1ViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.FragmentPuzzleCreator1">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createPuzzle"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxResult"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/_maxResult"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/resultMaxLength"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Integer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/resultMaxLength"
                    android:text="@={viewModel._maxResult}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxValue1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/maxValue1"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/generatedValuesMaxLength"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxResult">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Integer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/generatedValuesMaxLength"
                    android:text="@={viewModel._maxValue1}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxValue2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/maxValue2"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/generatedValuesMaxLength"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxValue1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Integer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/generatedValuesMaxLength"
                    android:text="@={viewModel._maxValue2}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxValue3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/maxValue3"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/generatedValuesMaxLength"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxValue2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Integer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/generatedValuesMaxLength"
                    android:text="@={viewModel._maxValue3}" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_background"
                android:onClick="@{() ->viewModel.onStartClick()}"
                android:text="@string/start"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/maxValue3"
                app:layout_constraintTop_toBottomOf="@+id/maxValue3" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_background"
                android:onClick="@{()->viewModel.onRandomClick()}"
                android:text="@string/random"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="@+id/maxValue3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/start"
                app:layout_constraintTop_toBottomOf="@+id/maxValue3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>