<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.applications.all_possibilities.viewModels.FragmentActionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/maxResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/ActionText"
            android:textSize="16sp"
            tools:text = "@string/maxResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/puzzleItemsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxResult">

            <TextView
                android:id="@+id/textValue1"
                style="@style/ActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.value1}"
                tools:text="5" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSign1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/frame" />

            <TextView
                android:id="@+id/textValue2"
                style="@style/ActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.value2}"
                tools:text="20" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSign2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/frame" />

            <TextView
                android:id="@+id/textValue3"
                style="@style/ActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.value3}"
                tools:text="35" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="="
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/result"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/frame"
                android:inputType="numberSigned"
                android:maxLength="@integer/resultMaxLength"
                android:text="@={viewModel.result}"
                android:textAlignment="center"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.onClearClick()}"
            android:src="@drawable/ic_baseline_clear_24"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/puzzleItemsLayout"
            app:layout_constraintStart_toEndOf="@+id/puzzleItemsLayout"
            app:layout_constraintTop_toTopOf="@+id/puzzleItemsLayout"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_background"
            android:stateListAnimator="@null"
            android:onClick="@{() -> viewModel.onCheckClick()}"
            android:text="@string/check"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/puzzleItemsLayout"
            app:layout_constraintStart_toStartOf="@+id/puzzleItemsLayout"
            app:layout_constraintTop_toBottomOf="@+id/puzzleItemsLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/answer_recycler_view_item"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkButton"
            />

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timer"
            tools:text="Left: 5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/puzzleFinished"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="@color/white"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/ActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_background"
                android:onClick="@{()->viewModel.goToHomeFragment()}"
                android:text="@string/back"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>